--- a/poseries/pom.xml
+++ b/poseries/pom.xml
@@ -130,18 +130,13 @@
 			<version>1.6.1</version> </dependency> -->
 
 		<!-- SWT -->
-		<!-- 
 		<dependency>
 			<groupId>org.eclipse.swt</groupId>
 			<artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
 			<version>4.2.1</version>
 		</dependency>
-		 -->
-		<dependency>
-            <groupId>org.eclipse.swt</groupId>
-            <artifactId>org.eclipse.swt.cocoa.macosx.x86_64</artifactId>
-            <version>4.2.1</version>
-        </dependency>
+		<!-- <dependency> <groupId>org.eclipse.swt</groupId> <artifactId>org.eclipse.swt.cocoa.macosx.x86_64</artifactId> 
+			<version>4.2.1</version> </dependency> -->
 
 		<!-- JFace + Eclipse's JFace extensions -->
 		<dependency>
