--- a/poseries/pom.xml
+++ b/poseries/pom.xml
@@ -19,6 +19,8 @@
 		<version-org.springframework>3.1.2.RELEASE</version-org.springframework>
 		<version-junit>4.11</version-junit>
 		<version-de.tyranus.framework>0.0.1-SNAPSHOT</version-de.tyranus.framework>
+		<version-org.eclipse.swt>4.2.1</version-org.eclipse.swt>
+		<version-joda-time>2.1</version-joda-time>
 		<!-- Plugin versions -->
 		<version-maven-deploy-plugin>2.7</version-maven-deploy-plugin>
 		<version-maven-javadoc-plugin>2.9</version-maven-javadoc-plugin>
@@ -133,7 +135,7 @@
 		<dependency>
 			<groupId>org.eclipse.swt</groupId>
 			<artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
-			<version>4.2.1</version>
+			<version>${version-org.eclipse.swt}</version>
 		</dependency>
 		<!-- <dependency> <groupId>org.eclipse.swt</groupId> <artifactId>org.eclipse.swt.cocoa.macosx.x86_64</artifactId> 
 			<version>4.2.1</version> </dependency> -->
@@ -143,6 +145,13 @@
 			<groupId>org.eclipse.jface</groupId>
 			<artifactId>org.eclipse.jface</artifactId>
 			<version>3.8.0.v20120521-2329</version>
+		</dependency>
+
+		<!-- JodaTime -->
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>${version-joda-time}</version>
 		</dependency>
 
 		<!-- Tests -->
